Nav-bar corrections/text adj
Fixed issue with the navbar covering the splash-page element; added some styling to the section-header text.

--- a/style.css
+++ b/style.css
@@ -5,9 +5,22 @@
   width: 100%;
 }
 
-li {
-  display: inline-block;
-  width: 20%;
+.nav-buttons>li {
+  display: inline;
   text-align: center;
   list-style-type: none;
+}
+
+.spacer
+{
+    width: 100%;
+    height: 40px;
+}
+
+.splash-page{
+  text-align: center;
+}
+
+.section-header {
+  text-align: center;
 }
